--- a/notebooks/6_ddp_2.ipynb
+++ b/notebooks/6_ddp_2.ipynb
@@ -59,11 +59,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "22b385f4-d91c-4fbf-ac24-8e59c80b60d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: a not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: a not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] top-level scope\n",
+      "    @ :0\n",
+      "  [2] eval\n",
+      "    @ ./boot.jl:373 [inlined]\n",
+      "  [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:1196\n",
+      "  [4] #invokelatest#2\n",
+      "    @ ./essentials.jl:716 [inlined]\n",
+      "  [5] invokelatest\n",
+      "    @ ./essentials.jl:714 [inlined]\n",
+      "  [6] (::VSCodeServer.var\"#158#159\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:19\n",
+      "  [7] withpath(f::VSCodeServer.var\"#158#159\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/packages/VSCodeServer/src/repl.jl:184\n",
+      "  [8] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      "  [9] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [10] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:114\n",
+      " [11] top-level scope\n",
+      "    @ ~/.vscode-remote/extensions/julialang.language-julia-1.6.6/scripts/notebook/notebook.jl:14\n",
+      " [12] include(mod::Module, _path::String)\n",
+      "    @ Base ./Base.jl:418\n",
+      " [13] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base ./client.jl:292\n",
+      " [14] _start()\n",
+      "    @ Base ./client.jl:495"
+     ]
+    }
+   ],
+   "source": [
+    "a\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,15 +307,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
