--- a/notebooks/1_Julia_Basics_correction.ipynb
+++ b/notebooks/1_Julia_Basics_correction.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Julia Basics\n",
-    "\n",
-    "## Advanced Macroeconomics: Numerical Methods (MIE37)\n",
-    "\n"
+    "# Julia Basics"
    ]
   },
   {
