--- a/notebooks/3_perturbation_neoclassical.ipynb
+++ b/notebooks/3_perturbation_neoclassical.ipynb
@@ -1,12 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Perturbation of the Neoclassical Growth Model\n",
-    "\n",
-    "## Advanced Macro: numerical methods"
+    "# Perturbation: Neoclassical Growth Model"
    ]
   },
   {
