--- a/notebooks/2_solow_correction.ipynb
+++ b/notebooks/2_solow_correction.ipynb
@@ -5,9 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Convergence\n",
-    "\n",
-    "## Advanced Macroeconomics: Numerical Methods (MIE37)"
+    "# Convergence: Solow Model"
    ]
   },
   {
