Reuse README file from github.

--- a/index.qmd
+++ b/index.qmd
@@ -2,37 +2,4 @@
 title: "Advanced Macro: Numerical Methods"
 ---
 
-
-JupyterLab: 
-[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/albop/mie37.git/master?urlpath=lab)
-
-Regular Notebooks:
-[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/albop/mie37.git/master)
-
-The main link to the slides is [here](http://www.mosphere.fr/mie37/slides/).
-
-## Indicative Schedule
-
-| Date               | Content                                                                                                             | Homework               |
-| ------------------ | ------------------------------------------------------------------------------------------------------------------- | ---------------------- |
-| 02/02              | [Intro](http://www.mosphere.fr/mie37/slides/index.html), Julia Basics (1)                                           | Epidemiology Tutorial  |
-| 09/02              | [Convergence of Sequences](http://www.mosphere.fr/mie37/slides/convergence.html), Julia Basics (2),  Solow Tutorial | Finish Solow Tutorial  |
-| <mark>16/02</mark> | [Perturbation](http://www.mosphere.fr/mie37/slides/perturbation.html) (1)                                                                                                    | Finish Neoclassical    |
-| 23/03              | Perturbation (2)                                                                                                    |                        |
-| 8/03               | Stochastic Models, RBC Model, Dolo Primer                                                                           | Coursework I           |
-| 16/03              | Discrete Dynamic Programming, McCall Model                                                                          |                        |
-| 23/03              | McCall Model (2)                                                                                                    |                        |
-| 30/03              | Interpolation, Optimization                                                                                         |                        |
-| 06/04              | Discretization, Time Iteration                                                                                      | Coursework  II         |
-
-## Communication
-
-- Zulip (best)
-- Email to `pwinant@escp.eu` starting with `[mie37]`
-- Github issues (PR also welcome)
-
-## Assessments
-
-- tutorials (optional) + projects (mandatory) (50%)
-- final exam (50%)
-
+{{< include README.md >}}
